wordpress-deploy/wordpress/clusterip-wp.yml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-wp
spec:
  type: ClusterIP
  selector:
    app: wp
  ports:
    - name: wpclusterip
      port: 80
