wordpress-deploy/wordpress/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wping
spec:
  tls:
  - hosts:
    - nam.exam.com
    secretName: ingress-tls-secret # tls를 위해 생성한 secret, tls.key 와 tls.crt 가 저장되어 있다.
  rules:
    - host: nam.exam.com # 이 주소로 웹브라우저 에서 접근하기 위해선 local에서 /etc/hosts에 워커노드의 아이피 등록 필요
      http:
        paths:
        - path: /
          backend:
            serviceName: clusterip-wp # 인그레스와 연결될 내부 서비스인 클러스터 아이피
            servicePort: 80
